Fix CSS Overflow for FireFox Browser

--- a/src/components/Reading/styles.css
+++ b/src/components/Reading/styles.css
@@ -18,7 +18,7 @@
     max-width: 24.5em;
     max-height: 14.2em;
     padding-left: .7em;
-    overflow: overlay;
+    overflow: scroll;
 }
 .header {
     padding-top: 1.25em;
@@ -38,6 +38,7 @@
 }
 .author-isbn {
     padding: .35em 0;
+    margin-right: 0.2em;
     display: flex;
     justify-content: space-between;
     font-size: .87em;
